# cs231n.github.io

./: .gitignore  requirements.txt
assignments/2026/assignment1/: features.ipynb  knn.ipynb  pyproject.toml  requirements.txt  softmax.ipynb
assignments/2026/assignment1/cs231n/: grid_search.py
assignments/2026/assignment1/cs231n/classifiers/: k_nearest_neighbor.py  linear_classifier.py  softmax.py
assignments/2026/assignment1/cs231n/saved/: softmax.npy
